fixed: cards containers going all the way down, map align right 40% width

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,7 +1,7 @@
 .navbar-lewagon {
   // position: absolute;
   width: 100vw;
-  padding: 20px 40px;
+  padding: 20px 50px;
   justify-content: space-between;
   background-color: #333;
 }
